# crap-rest

./: Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  build.rs
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  nightly.yml  release.yml
proto/: content.proto
src/: client.rs  config.rs  convert.rs  error.rs  main.rs
src/handlers/: auth.rs  collections.rs  globals.rs  jobs.rs  mod.rs  openapi.rs  proxy.rs  schema.rs  subscribe.rs  versions.rs
